--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ duckduckgo-search = "^8.0.0"
 langchain = "^0.3.23"
 numexpr = "^2.10.2"
 chatollama = "^0.2.13"
+langgraph = "^0.4.1"
+wikipedia = "^1.4.0"
 
 
 [build-system]
